set up trace legend table, fix question mark icon clipping

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -156,6 +156,7 @@ button {
 }
 
 .fa-question-circle {
+  padding-left: 1px;
   color: $light-grey;
   font-size: 18px;
 }
@@ -782,18 +783,17 @@ td.day.active.today:hover {
 }
 
 .trace-legend {
-  width: 100%;
-  font-size: 14px;
-  text-align: left;
-  margin-right: 15px;
-  /*margin-left: 25px;*/
+  font-size: small;
+  text-align: center;
   margin-top: 10px;
+  width: 100%;
   td {
-    /*padding-left: 5px;*/
+    padding: 5px;
   }
-  .level {
-    width: 25px;
-    height: 25px;
+  th {
+    width: 33%;
+    text-align: center;
+    padding: 5px;
   }
 }
 
